--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>AirBnB clone</title>
-        <link rel="icon" href="images/icon.png" type="images/png">
+        <link rel="icon" href="images/icon.png" type="image/png">
         <link rel="stylesheet" href="styles/4-common.css">
         <link rel="stylesheet" href="styles/3-header.css">
         <link rel="stylesheet" href="styles/3-footer.css">
