--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>AirBnB_clone</title>
-		<link rel="icon" href="images/icon.png" type="image/png">
+		<link rel="icon" href="images/icon.png">
 		<link rel="stylesheet" href="styles/3-common.css">
 		<link rel="stylesheet" href="styles/3-header.css">
 		<link rel="stylesheet" href="styles/3-footer.css">
@@ -14,9 +14,9 @@
             	</div>
 		</header>
 		<footer>
-		<p>
-		Best School
-            	</p>
+			<p>
+			Best School
+			</p>
 		</footer> 
 	</body>
 </html>
