--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
+	<head>
 	<meta charset="utf-8">
 	<title>AirBnB_clone</title>
-	<link rel="icon" href="images/icon.png" type="image/png">
-	<link rel="stylesheet" href="styles/4-common.css">
-	<link rel="stylesheet" href="styles/3-header.css">
-	<link rel="stylesheet" href="styles/3-footer.css">
-	<link rel="stylesheet" href="styles/6-filters.css">
-   </head>
-   <body>
+        <link rel="icon" href="images/icon.png">
+        <link rel="stylesheet" href="styles/4-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="stylesheet" href="styles/6-filters.css">
+	</head>
+	<body>
 	<header>
-		<div class="logo"></div>
+		<div class="logo">
+           	</div>
 	</header>
 	<div class="container">
 		<section class="filters">
@@ -21,8 +22,8 @@
 				<ul class="popover">
 					<li>
 						<h2>Arizona:</h2>
-                        		</li>
-                        		<li>
+					</li>
+					<li>
 						<ul>
 							<li>page</li>
 							<li>page2</li>
@@ -30,8 +31,8 @@
 					</li>
 					<li>
 						<h2>Carlifonia</h2>
-                        		</li>
-                        		<li>
+					</li>
+					<li>
 						<ul>
 							<li>San Francisco</li>
 							<li>Los Altos</li>
@@ -50,8 +51,8 @@
 					</ul>
 				</div>
 				<button>Search</button>
-			</section>
-		</div>
+		</section>
+	</div>
 		<footer>
 			<p>Best School</p>
 		</footer> 
