--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<title>AirBnB_clone</title>
-		<link rel="icon" href="images/icon.png" type="image/png">
-		<link rel="stylesheet" href="styles/4-common.css">
-		<link rel="stylesheet" href="styles/3-header.css">
-		<link rel="stylesheet" href="styles/3-footer.css">
-		<link rel="stylesheet" href="styles/6-filters.css">
+	<meta charset="utf-8">
+	<title>AirBnB_clone</title>
+        <link rel="icon" href="images/icon.png">
+        <link rel="stylesheet" href="styles/4-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="stylesheet" href="styles/6-filters.css">
 		<link rel="stylesheet" href="styles/7-places.css">
 	</head>
 	<body>
-		<header>
-			<div class="logo"></div>
+	<header>
+	<div class="logo">
+	</div>
 		</header>
-		<div class="container">
-			<section class="filters">
+			<div class="container">
+				<section class="filters">
 				<div class="locations">
 					<h3>States</h3>
 					<h4>Carlifonia, Arizona ...</h4>
 					<ul class="popover">
 						<li>
 							<h2>Arizona</h2>
-                        </li>
-                        <li>
+                        			</li>
+                        			<li>
 							<ul>
 								<li>page</li>
 								<li>page2</li>
@@ -31,8 +32,8 @@
 						</li>
 						<li>
 							<h2>Carlifonia</h2>
-                        </li>
-                        <li>
+                        			</li>
+                        			<li>
 							<ul>
 								<li>san Francisco</li>
 								<li>los Altos</li>
@@ -70,4 +71,3 @@
 		</footer> 
 	</body>
 </html>
-
