--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -22,8 +22,8 @@
 					<ul class="popover">
 						<li>
 							<h2>Arizona</h2>
-                        </li>
-                        <li>
+                        			</li>
+                        			<li>
 							<ul>
 								<li>page</li>
 								<li>page2</li>
@@ -31,8 +31,8 @@
 						</li>
 						<li>
 							<h2>Carlifonia</h2>
-                        </li>
-                        <li>
+                        			</li>
+                        			<li>
 							<ul>
 								<li>san Francisco</li>
 								<li>los Altos</li>
@@ -55,62 +55,90 @@
 			<section class="places">
 				<h1>Places</h1>
 				<article>
-                    <h2>My home</h2>
+                    		<h2>My home</h2>
 					<div class="price_by_night">
 						<span>$80</span>
 					</div>
-					<div class="information">
-						<div class="max_guest">
-							<span>2 Guests</span>
-						</div>
-						<div class="number_rooms">
-							<span>1 Bedroom</span>
-						</div>
-						<div class="number_bathrooms">
-							<span>1 Bathroom</span>
-						</div>
+				<div class="information">
+					<div class="max_guest">
+						<span>2 Guests</span>
 					</div>
-					<div class="user">
-						<p><strong>Owner: </strong>john lennon</p>
+					<div class="number_rooms">
+						<span>1 Bedroom</span>
 					</div>
-					<div class="description">
-						<p>
-                            This is lovely 1 Bedroom and 1 Bathroom apartment that can accomodate 2 people.
-                            it locates at the center of Shanghai and next subway line1.
-                            1 stop to people square, 2 stops to Bund, 3 stops to Jingan Temple.
-                        </p>
+					<div class="number_bathrooms">
+						<span>1 Bathroom</span>
 					</div>
+				</div>
+				<div class="user">
+					<p><strong>Owner: </strong>john lennon</p>
+				</div>
+				<div class="description">
+				<p>
+                            		This is lovely 1 Bedroom and 1 Bathroom apartment that can accomodate 2 people.
+                            		it locates at the center of Shanghai and next subway line1.
+                            		1 stop to people square, 2 stops to Bund, 3 stops to Jingan Temple.
+                        	</p>
+				</div>
 				</article>
 				<article>
 					<h2>Tiny House</h2>
 					<div class="price_by_night">
 						<span>$65</span>
 					</div>
+				<div class="information">
+					<div class="max_guest">
+						<span>4 Guests</span>
+					</div>
+					<div class="number_rooms">
+						<span>2 Bedrooms</span>
+					</div>
+					<div class="number_bathrooms">
+						<span>1 Bathroom</span>
+					</div>
+				</div>
+				<div class="user">
+					<p><strong>Owner: </strong>Adrienne</p>
+				</div>
+				<div class="description">
+				<p>
+                        		Our place is a private, affordable stand-alone guets house centrally located just minutes
+                        		to French Quarters, downtown, the Fair Grounds (Jazz Fest) and City park.
+                        		The guest house is a quaint, 400 square ft.
+                        		with a full bath mini Kitchen, & livingroom.
+                        		the extra high ceilings make the home feel more spacious.
+                        		the sofa converts to a bed also.
+                        		We have a hand made counter area that adds character to the room and a great porch/deck
+                        		to relax on and have a glass of Merlot.
+                    		</p>
+				</div>
+				</article>
+				<article>
+					<h2>A suite</h2>
+					<div class="price_by_night">
+						<span>$190</span>
+					</div>
 					<div class="information">
 						<div class="max_guest">
-							<span>4 Guests</span>
+							<span>6 Guests</span>
 						</div>
 						<div class="number_rooms">
-							<span>2 Bedrooms</span>
+							<span>3 Bedrooms</span>
 						</div>
 						<div class="number_bathrooms">
-							<span>1 Bathroom</span>
+							<span>2 Bathroom</span>
 						</div>
 					</div>
 					<div class="user">
-						<p><strong>Owner: </strong>Adrienne</p>
+						<p><strong>Owner: </strong>Bill Zuckerberg</p>
 					</div>
 					<div class="description">
 					<p>
-                        Our place is a private, affordable stand-alone guets house centrally located just minutes
-                        to French Quarters, downtown, the Fair Grounds (Jazz Fest) and City park.
-                        The guest house is a quaint, 400 square ft.
-                        with a full bath mini Kitchen, & livingroom.
-                        the extra high ceilings make the home feel more spacious.
-                        the sofa converts to a bed also.
-                        We have a hand made counter area that adds character to the room and a great porch/deck
-                        to relax on and have a glass of Merlot.
-                    </p>
+						Newl renovted spacios 2 bedrooms 2 baths in cozy Gastown style 
+						unit with the views of North Shore mountains.
+						WWoodward;s landmark building situated at the histric
+						heart of Vancouver.
+                    			</p>
 					</div>
 				</article>
 			</section>
